<?xml version="1.0"?>
<package>
  <name>tbot2_laser_rw</name>
  <version>1.0.0</version>
  <description>Package for turtlebot2 random walk using laser scanner</description>

  <maintainer email="hagyut@gmail.com">GTED</maintainer>
  <author email="hagyut@gmail.com">GTED</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
  </export>
</package>